Tue Feb 29 16:34:49 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/gsdoc/Introduction.gsdoc: New file - beginning of
	a short overview/introduction of the GNUstep GUI API.

Tue Feb 29 07:04:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSFontManager.m: fixes and tiyups - mostly from Fred Keifer.

Mon Feb 28 15:37:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Documentation/gsdoc: Added skeleton documentation for the
	OpenStep/MacOS-X appkit classes in the gsdoc subdirectory.

Mon Feb 28 06:42:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Font fixes - mostly from Fred Keifer.
	* Source/NSText.m: Use font manager.
	* Source/NSFontManager.m: some menu improvments.
	* Source/NSFontPanel.m: Correect setting of font and correct
	preview code for when there is no 'set' font

Fri Feb 25 16:20:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSWindow.h: added has_closed flag
	* Source/NSWindow.m: made close/deallocation sequence more robust
	* Source/NSApplication.m: improve removal of windows from menus
	on close.

2000-02-25  Adam Fedor  <fedor@gnu.org>

	* Source/NSCursor.m ([NSCursor -setImage:]): Implement.

Fri Feb 25 07:07:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWorkspace.m: Removed a little unused code and fixed a
	minor portabilitym problem with path usage.

Tue Feb 22 17:51:52 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Still much to do in the font classes, but thanks to Fred Kiefer
	things are starting to work.

	Contributed by Fred Kiefer <FredKiefer@gmx.de>:
	* Headers/AppKit/NSFontManager.h: Fixed typo in ivar name.
	* Source/NSFontManager.m: More work on this class.
	* Source/NSFontPanel.m: Almost complete rewrite.
	* Headers/AppKit/NSFontPanel.h: Idem.  
	
Mon Feb 21 14:40:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: ([-close]) remove spurious retain.